test code for service